corrected vertical alignment

--- a/es6/client/styles/_header.scss
+++ b/es6/client/styles/_header.scss
@@ -66,7 +66,7 @@
   .header-hashtags {
     right: 30px;
     position: absolute;
-    bottom: 15px;
+    bottom: 20px;
     font-size: 30px;
     line-height: 40px;
     margin: 0;
